<resources>
    <string name="app_name">LatihanMembuatLayout</string>
    <string name="nameText">Nama</string>
    <string name="studentIdText">StudentID</string>
    <string name="majorText">Jurusan</string>
    <string name="hobbyText">Hobi</string>

    <string name="buttonText">OKE</string>
    <string name="buttonSimpan">SIMPAN</string>

    <string name="add_button_description">Tampilkan teks</string>
    <string name="cross_button_description">Hapus semua</string>
</resources>